--- a/index.html
+++ b/index.html
@@ -120,19 +120,21 @@
 <body>
 
     <h1>Animal Group Names</h1>
-    <p>For many species of animals, there are names that we use to refer to a group of them - like a flock of birds. Here are a few you might not know.</p>
+    <p>Per molte specie di animali, ci sono nomi che usiamo per riferirci a un gruppo di loro, come uno stormo di uccelli. Eccone alcuni che potresti non conoscere.
+    </p>
 
-    <h2>A skulk of foxes</h2>
-    <p>Also called a "leash."</p>
+    <h2>Un gruppo di volpi
+    </h2>
+    
     <div class="animal-images">
         <img src="https://www.kasandbox.org/programming-images/animals/fox.png">
-        <img src="https://www.kasandbox.org/programming-images/animals/fox.png">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.photowall.com%2Fch-it%2Fred-fox-in-the-snow-incorniciata&psig=AOvVaw0sQFvWgOCQ9Xb1sXRwvr4k&ust=1744184212043000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJCErdb2x4wDFQAAAAAdAAAAABAE">
     </div>
 
     <h2>A clowder of cats</h2>
     <p>Also called a "pounce", "glaring", "kindle", or "clutter."</p>
     <div class="animal-images">
-        <img src="https://www.kasandbox.org/programming-images/animals/cat.png">
+        <img src="https://www.google.com/imgres?q=cat&imgurl=https%3A%2F%2Fimages.squarespace-cdn.com%2Fcontent%2Fv1%2F607f89e638219e13eee71b1e%2F1684821560422-SD5V37BAG28BURTLIXUQ%2Fmichael-sum-LEpfefQf4rU-unsplash.jpg&imgrefurl=https%3A%2F%2Fwww.hphhfoundation.org%2Fblog%2Forigin-of-cats&docid=Vram-r9u9qi4iM&tbnid=aq2MwF4OIQKYYM&vet=12ahUKEwjrsfrg9seMAxXHxAIHHX3VJegQM3oECFIQAA..i&w=2500&h=1667&hcb=2&ved=2ahUKEwjrsfrg9seMAxXHxAIHHX3VJegQM3oECFIQAA">
         <img src="https://www.kasandbox.org/programming-images/animals/cat.png">
     </div>
     <p><a href="http://en.wikipedia.org/wiki/List_of_animal_names">Learn more on Wikipedia</a></p>
@@ -142,14 +144,19 @@
     <img src="https://www.kasandbox.org/programming-images/animals/fox.png" class="image-medium gold-frame">
     <img src="https://www.kasandbox.org/programming-images/animals/penguins.png" class="image-small silver-frame">
 
-    <h1>What are Clouds?</h1>
+    <h1>Cosa sono le nuvole?
+    </h1>
     <img id="cloud-pic" src="https://www.kasandbox.org/programming-images/landscapes/clouds-from-plane.png">
     <div id="cloud-sidebar">
-        <h5>Why are some clouds yellow?</h5>
-        <p>Yellowish clouds may occur in the late spring through early fall months during forest fire season. The yellow color is due to the presence of pollutants in the smoke. Yellowish clouds caused by the presence of nitrogen dioxide are sometimes seen in urban areas with high air pollution levels.</p>
+        <h5>Perché alcune nuvole sono gialle?
+        </h5>
+        <p>Le nubi giallastre possono presentarsi dalla tarda primavera all'inizio dell'autunno durante la stagione degli incendi boschivi. Il colore giallo è dovuto alla presenza di inquinanti nel fumo. Le nubi giallastre causate dalla presenza di biossido di azoto sono talvolta visibili nelle aree urbane con alti livelli di inquinamento atmosferico.
+        </p>
     </div>
-    <p>In meteorology, a cloud is a visible mass of liquid droplets or frozen crystals made of water or various chemicals suspended in the atmosphere above the surface of a planetary body. These suspended particles are also known as aerosols and are studied in the cloud physics branch of meteorology.</p>
-    <p>Terrestrial cloud formation is the result of air in Earth's atmosphere becoming saturated due to either or both of two processes: cooling of the air and adding water vapor. With sufficient saturation, precipitation will fall to the surface.</p>
+    <p>In meteorologia, una nuvola è una massa visibile di goccioline liquide o cristalli congelati fatti di acqua o varie sostanze chimiche sospese nell'atmosfera sopra la superficie di un corpo planetario. Queste particelle sospese sono anche note come aerosol e sono studiate nel ramo della fisica delle nuvole della meteorologia
+        .</p>
+    <p>La formazione di nubi terrestri è il risultato della saturazione dell'aria nell'atmosfera terrestre a causa di uno o entrambi i due processi: raffreddamento dell'aria e aggiunta di vapore acqueo. Con sufficiente saturazione, le precipitazioni cadranno in superficie.
+    </p>
     <button onclick="toggleAnimals()">Mostra/Nascondi Animali</button>
 
     <p><a href="http://en.wikipedia.org/wiki/Cloud">Read more on Wikipedia</a></p>
